# ur10e_realsense_pick

./: .gitignore  .gitmodules  README.md
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: pick_and_place.launch.py
src/manipulation/: CMakeLists.txt  package.xml
src/manipulation/launch/: manipulation.launch.py
src/manipulation/src/: pick_place_server.cpp
src/perception/: CMakeLists.txt  package.xml
src/perception/include/perception/: pointcloud_processor.hpp
src/perception/launch/: perception.launch.py
src/perception/src/: pointcloud_processor.cpp
src/realsense_bringup/: CMakeLists.txt  package.xml
src/realsense_bringup/launch/: realsense.launch.py
src/segmentation/: CMakeLists.txt  package.xml  setup.py
src/segmentation/launch/: segmentation.launch.py
src/segmentation/segmentation/: yolo_segmentation_node.py
src/simulation/: CMakeLists.txt  package.xml
src/simulation/config/: sim_controllers.yaml
src/simulation/launch/: sim_fake_hardware.launch.py  sim_gazebo.launch.py
src/simulation/srdf/: ur10e_realsense.srdf.xacro
src/simulation/urdf/: ur10e_with_realsense.urdf.xacro
src/simulation/worlds/: pick_world.world
