<?xml version="1.0"?>
<package format="3">
  <name>perception</name>
  <version>0.1.0</version>
  <description>
    C++ node that fuses the YOLOv8 segmentation mask with the aligned depth image
    to build a masked point cloud, estimates the 3D centroid and principal axes of
    the target object, and publishes a grasp-ready PoseStamped.
  </description>
  <maintainer email="vishnuajaykumar@gmail.com">Vishnu Ajaykumar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>message_filters</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
