<?xml version="1.0"?>
<package format="3">
  <name>segmentation</name>
  <version>0.1.0</version>
  <description>
    YOLOv8-seg inference node. Subscribes to /camera/color/image_raw,
    runs instance segmentation, and publishes per-object masks as
    sensor_msgs/Image on /segmentation/masks and detection metadata on
    /segmentation/detections (vision_msgs/Detection2DArray).
  </description>
  <maintainer email="vishnuajaykumar@gmail.com">Vishnu Ajaykumar</maintainer>
  <license>AGPL-3.0</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_cmake_python</build_type>
  </export>
</package>
