<?xml version="1.0"?>
<package format="3">
  <name>simulation</name>
  <version>0.1.0</version>
  <description>
    Gazebo simulation environment for UR10e + RealSense pick-and-place.
    Provides a world with a table and objects, UR10e URDF with RealSense
    camera plugin, and launch files for both fake-hardware (RViz only) and
    full Gazebo simulation modes.
  </description>
  <maintainer email="vishnuajaykumar@gmail.com">Vishnu Ajaykumar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_bringup</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
